--- a/app/views/flyers/welcome.html.erb
+++ b/app/views/flyers/welcome.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome To Airport Dating!</h1>
 <%= image_tag "https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727__340.jpg"%>
 
-<h3><%= link_to "Create An Account", new_flyer_path %></h3>
 <h3><%= link_to "Login", login_path %></h3>
+<h3><%= link_to "Create An Account", new_flyer_path %></h3>
+<h3><%= link_to "See List of Airports", airports_path%></h3>
