--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,23 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <%= link_to "iflyDating", welcome_path, class: "navbar-brand" %>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <%= link_to "Create An Account", new_flyer_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+      <%= link_to "Login", login_path, class: "nav-link" %>
+      </li>
+    </ul>
+  </div>
+</nav>
+
     <%= yield %>
   </body>
 </html>
