--- a/app/views/flyers/_form.html.erb
+++ b/app/views/flyers/_form.html.erb
@@ -26,62 +26,41 @@
   <div class = "form-group">
     <%= f.label :first_name %>
     <div class= "col-md-4">
-      <%= f.password_field :first_name %>
+      <%= f.text_field :first_name %>
     </div>
   </div>
 
 <div class = "form-group">
     <%= f.label :last_name %>
     <div class= "col-md-4">
-      <%= f.password_field :last_name %>
+      <%= f.text_field :last_name %>
     </div>
   </div>
 </div>
-  <div class = "form-group">
-    <%= f.label :password %>
-    <div class= "col-md-4">
-      <%= f.password_field :password %>
-    </div>
-  </div>
 
   <div class = "form-group">
     <%= f.label :occupation %>
     <div class= "col-md-4">
-      <%= f.password_field :occupation %>
+      <%= f.text_field :occupation %>
     </div>
   </div>
 
  <div class = "form-group">
     <%= f.label :img_url %>
     <div class= "col-md-4">
-      <%= f.password_field :img_url %>
+      <%= f.text_field :img_url %>
     </div>
   </div>
- 
+
   <%= f.label :airport %>
   <%= f.collection_select :airport_id, Airport.all, :id, :name %>
 
- <div class = "form-group"> 
+ <div class = "form-group">
     <%= f.label :description %>
       <div class= "col-md-4">
       <%= f.text_area :description %>
     </div>
 </div>
-  
-  <%= f.submit %>
-<% end %>
-<% if @flyer.errors.present? %>
-  <ul>
-    <% @flyer.errors.full_messages.each do |msg| %>
-    <li style="color: red;"><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
 
-<% if @flyer.errors.present? %>
-  <ul>
-    <% @flyer.errors.full_messages.each do |msg| %>
-    <li style="color: red;"><%= msg %></li>
-    <% end %>
-  </ul>
+  <%= f.submit %>
 <% end %>
