--- a/app/views/layouts/old/old.html.erb
+++ b/app/views/layouts/old/old.html.erb
@@ -1,4 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!!DOCTYPE html>
+<html>
+  <head>
+    <title>Ifly</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/rail.css">
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -14,3 +24,9 @@
 </ul>
 </div>
 </nav>
+
+  </head>
+
+  <body>
+    <%= yield %>
+  </body>
