--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -33,6 +33,7 @@
 <div class="col-md-10 col-md-offset-1">
 <%= form_for [@conversation, @message] do |f| %>
 <div class="form-group">
+
   <%= f.text_area :content, class: "form-control" %>
 </div>
   <%= f.text_field :flyer_id, value: current_user.id, type: "hidden" %>
@@ -40,4 +41,5 @@
   <%= f.submit "Send Reply", class: "form-control btn btn-primary" %>
 </div>
 <% end %>
+<%= button_to "Refresh", conversation_messages_path, :method => :get %>
 </div>
