--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
+ <a class="navbar-brand" href="/">
+      <div class="logo-image">
+            <img src="image" class="img-fluid">
+      </div>
+</a>
 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-<%= link_to "iflyDating", welcome_path, class: "navbar-brand" %>
+<%= link_to "iflyNetworking", welcome_path, class: "navbar-brand" %>
 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
   <li class="nav-item active">
     <%= link_to "Create An Account", new_flyer_path, class: "nav-link" %>
