--- a/app/views/flyers/_form.html.erb
+++ b/app/views/flyers/_form.html.erb
@@ -8,7 +8,7 @@
   </ul>
 <% end %>
 
-
+<div class="fly_new">
 <%= form_for @flyer , :html => {:class => "form-horizontal center"} do |f| %>
   <div class = "form-group">
     <%= f.label :user_name %>
@@ -62,6 +62,6 @@
       <%= f.text_area :description %>
     </div>
 </div>
-
+</div>
   <%= f.submit %>
 <% end %>
