--- a/app/views/flyers/welcome.html.erb
+++ b/app/views/flyers/welcome.html.erb
@@ -5,7 +5,8 @@
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">iFly Airport Social Networking!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <p>Social Networking made easy, when your on the fly. iFly is the first Airport Networking Application for people to meet while at the airport.
+       Meet compabable individual in your career field, choose one of the dining options at the airport of your choice. </p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
   </div>
@@ -31,6 +32,4 @@
     </div>
 
     <hr>
-<div>
-<%= image_tag "https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727__340.jpg"%>
-</div>
+
