--- a/app/views/flyers/welcome.html.erb
+++ b/app/views/flyers/welcome.html.erb
@@ -5,28 +5,30 @@
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">iFly Airport Social Networking!</h1>
+
       <p>Social Networking made easy, when your on the fly. iFly is the first Airport Networking Application for people to meet while at the airport.
        Meet compabable individual in your career field, choose one of the dining options at the airport of your choice. </p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+
     </div>
-  </div>
+    <div id="myDIV"></div>
 
   <div class="container">
     <!-- Example row of columns -->
     <div class="row">
       <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <h2>Testimony</h2> 
+        <p>Robert and Mathalia met at the Atlanta airport. This was a macth made in heaven. </p>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <h2>How to Meet Your Match</h2>
+        <p> </p>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h2>Best Place To Meet</h2>
+        <p>Airport Restaurants,
+           Coffee Shop, Gate Area</p>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
     </div>
