--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -43,5 +43,5 @@
 </div>
 <% end %>
 <%= button_to "Refresh", conversation_messages_path, :method => :get %>
-
+<%= button_to "MeetUp", meetups_path, :method => :get %>
 </div>
