--- a/app/views/meetups/new.html.erb
+++ b/app/views/meetups/new.html.erb
@@ -1,6 +1,16 @@
 <h1>Meeting Details</h1>
+<% if @meetup.errors.present? %>
+  <% @meetup.errors.full_messages.each do |msg| %>
+  <li style="color: red"><%= msg %></li>
+  <% end %>
+<%end%>
+
 
 <%= form_for @meetup do |f| %>
+<br>
+  <h5>Your Airport</h5>
+  <%= f.label current_user.airport.name %>
+  <br>
   <%= f.label 'Pick Your Restaurants' %>
   <br>
   <%= f.collection_select :location, @meetup.restaurants, :name, :name%>
@@ -13,11 +23,14 @@
   <br>
   <%= f.text_field :store_hours %>
   <br>
-  <%= f.label 'Your Airport' %>
+  <%= f.label 'Airport Number' %>
   <br>
-  <%= f.text_area :airport_id, :value => current_user.airport.name%>
+  <%= f.text_field :airport_id %>
+  <br>
+  <%= f.label 'Conversation Number' %>
+  <br>
+  <%= f.text_field :conversation_id %>
   <br>
   <br>
-
   <%= f.submit "Send Network Request" %>
 <% end %>
