Fix create button add content

--- a/app/views/flyers/welcome.html.erb
+++ b/app/views/flyers/welcome.html.erb
@@ -6,8 +6,9 @@
     <div class="container">
       <h1 class="display-3">iFly Airport Social Networking!</h1>
 
-      <p>Social Networking made easy, when your on the fly. iFly is the first Airport Networking Application for people to meet while at the airport.
-       Meet compabable individual in your career field, choose one of the dining options at the airport of your choice. </p>
+      <p>Social Networking made easy, when your on the fly. iFly is the first Airport Social Networking Application for people to meet while at the airport.
+       Meet compabable individuals in your career field, choose one of the dining options at the airport of your choice. Meaningful Connections,
+        Not Just Casual Hookups. Join iFly Today! Find True Compatibility. Happier Relationships. </p>
 
     </div>
     <div id="myDIV"></div>
@@ -21,14 +22,16 @@
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>How to Meet Your Match</h2>
-        <p> </p>
+        <h2>How to Meet</h2>
+        <p>Find someone your interested in Meeting
+           Start a conversations 
+           Choose a location in Airport to Meet </p>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h2>Best Place To Meet</h2>
         <p>Airport Restaurants,
-           Coffee Shop, Gate Area</p>
+          Coffee Shop, Gate Area</p>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
     </div>
