--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,16 @@
 </ul>
 </div>
 </nav>
-
-  </head>
-  
+</head>
 <body>
+  <div id = container>
+      <div id = "main">
     <%= yield %>
+      </div>
+  </div>
+  <footer id= "footer">
+    <h2>&copy GitRichorDiePryin Flatiron 2019</h2>
+  </footer>
 </body>
+
 </html>
