--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,22 @@
    background-image: url("https://images.unsplash.com/photo-1520493004415-dca44df8ade5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=756&q=80"), url("paper.gif");
    background-blend-mode: lighten;
  }
+
+ #container {
+     min-height: 100%
+ }
+
+ #main {
+   overflow: auto;
+   padding-bottom: 100px;
+ }
+
+ #footer {
+  background-color: 00BFFF;
+  position: relative;
+  height: 100px;
+  margin-top: -100px;
+  clear: both;
+  height: 100px;
+ }
+ #footer h2 {float:left; width:100%; text-align:center; }
